--- a/src/styles.scss
+++ b/src/styles.scss
@@ -3,6 +3,7 @@
 $fa-font-path: '../node_modules/font-awesome/fonts/';
 $roboto-font-path: '../node_modules/roboto-fontface/fonts/roboto/';
 
-@import '../node_modules/materialize-css/sass/materialize.scss';
+//@import '../node_modules/materialize-css/sass/materialize.scss';
 @import '../node_modules/font-awesome/scss/font-awesome.scss';
+@import '../node_modules/@clr/ui/clr-ui.min.css';
 @import url('https://fonts.googleapis.com/css?family=Open+Sans:300,400,600,700');
